[gd_scene load_steps=3 format=3 uid="uid://8ymbru8ocium"]

[ext_resource type="Script" path="res://prog115b.gd" id="1_1e821"]

[sub_resource type="Theme" id="Theme_07flh"]
default_font_size = 29

[node name="prog115b" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1e821")

[node name="item" type="ItemList" parent="."]
layout_mode = 0
offset_left = 186.0
offset_top = 122.0
offset_right = 986.0
offset_bottom = 270.0

[node name="btncalc" type="Button" parent="."]
modulate = Color(0.298039, 1, 0, 1)
offset_left = 166.0
offset_top = 528.0
offset_right = 380.0
offset_bottom = 624.0
theme = SubResource("Theme_07flh")
text = "Calculate"

[node name="btnexit" type="Button" parent="."]
modulate = Color(1, 0, 0.0156863, 1)
offset_left = 927.0
offset_top = 538.0
offset_right = 1141.0
offset_bottom = 634.0
theme = SubResource("Theme_07flh")
text = "Exit"

[node name="btnclear" type="Button" parent="."]
modulate = Color(0, 0.984314, 1, 1)
offset_left = 453.0
offset_top = 525.0
offset_right = 667.0
offset_bottom = 621.0
theme = SubResource("Theme_07flh")
text = "Clear"

[connection signal="pressed" from="btncalc" to="." method="_on_btncalc_pressed"]
[connection signal="pressed" from="btnexit" to="." method="_on_btnexit_pressed"]
[connection signal="pressed" from="btnclear" to="." method="_on_btnclear_pressed"]
